tests/error/type_match/base_case_slice_const_propagation1.bz
// error: unable to match type '*int32' to '*const int32'
// note: mismatched const qualification of types 'int32' and 'const int32'
// note: while matching expression of type '[: *int32]' to '[: *const int32]'
function test()
{
	let _: [: *const int32] = [: *int32]();
}
